Update date; correct LaTeX error

--- a/Winter-2019-Errata.html
+++ b/Winter-2019-Errata.html
@@ -1511,7 +1511,7 @@ div.tocify {
 <h1 class="title toc-ignore">Errata for <em>Statistics for Linguists: An Introduction Using R</em>, Bodo Winter, 2019, Routledge</h1>
 <h4 class="author"><div class="line-block">Dan Villarreal<br />
 University of Pittsburgh</div></h4>
-<h4 class="date">Updated 2/23/2021</h4>
+<h4 class="date">Updated 2/25/2021</h4>
 
 </div>
 
@@ -1585,7 +1585,7 @@ University of Pittsburgh</div></h4>
 <tr class="odd">
 <td align="right">77</td>
 <td>Conversely, 32% of the variation in response durations is due to chance</td>
-<td>Should be 28% (100%$$74%), not 32%.</td>
+<td>Should be 28% (100%$-$74%), not 32%.</td>
 </tr>
 <tr class="even">
 <td align="right">78</td>
