Knit based on #2

--- a/Winter-2019-Errata.html
+++ b/Winter-2019-Errata.html
@@ -1947,7 +1947,7 @@ message:
 <td><em>taste valence</em> should be <em>smell valence</em>, and
 <em>smell valence</em> should be <em>taste valence</em>. That is,
 <em>smell valence</em>, as the first ordered factor level, should
-correspond to +1 in the model coefficients, and <em>smell valence</em>
+correspond to +1 in the model coefficients, and <em>taste valence</em>
 should correspond to -1.</td>
 </tr>
 </tbody>
