added ch. 9 erratum

--- a/Winter-2019-Errata.html
+++ b/Winter-2019-Errata.html
@@ -2066,6 +2066,11 @@ value for a normal distribution is 1.96, underscoring the point that
 larger sample sizes make the <em>t</em>-distribution more like the
 normal distribution.</td>
 </tr>
+<tr class="even">
+<td align="right">169</td>
+<td><code>x &lt;- rep(c(&#39;A&#39;, &#39;B&#39;), eac= n)</code></td>
+<td><code>eac=</code> should be <code>each=</code></td>
+</tr>
 </tbody>
 </table>
 </div>
