added ch. 15 erratum

--- a/Winter-2019-Errata.html
+++ b/Winter-2019-Errata.html
@@ -2205,6 +2205,32 @@ scales</em> and <em>interval/ratio scales</em>.</td>
 </tbody>
 </table>
 </div>
+<div id="chapter-15-mixed-models-2" class="section level1">
+<h1>Chapter 15: Mixed models 2</h1>
+<table>
+<colgroup>
+<col width="3%" />
+<col width="41%" />
+<col width="55%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th align="right">Page</th>
+<th>Text</th>
+<th>Comment</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="right">259</td>
+<td>If this were true, this would mean that higher intercepts always
+(deterministically) go together with higher frequency slopes (the
+correlation is indicated to be negative).</td>
+<td><em>Negative</em> should be <em>positive</em>.</td>
+</tr>
+</tbody>
+</table>
+</div>
 
 
 
